--- a/index.html
+++ b/index.html
@@ -7,8 +7,17 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css"></script>
 </head>
 <body>
-    <p>
+    <script>
+        $(".test").click(function(){
+            alert("lol clicked!");
+        });
+
+    </script>
+
+    <p id="test">Hallo Welt!</p>
+
 </body>
 </html>
