--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <script>
-        $(".test").click(function(){
+        $("#test").click(function(){
             alert("lol clicked!");
         });
 
