--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
             alert("lol clicked!");
         });
 
+        var x = document.getElementById("test");
+        x.addEventListener(click, test());
+        function test() {
+            alert("Lol ok old way")
+        }
     </script>
 
     <p id="test">Hallo Welt!</p>
