--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 </head>
 <body>
     <script>
-        $(function() {
+      /*   $(function() {
             $("#test").click(function(){
                 alert("lol clicked!");
                 
             });
-        });       
+        });      */  
     </script>
 
     <p id="test">Hallo Welt!</p>
