--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Test Seite von Adrian</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css"></script>
 </head>
@@ -19,6 +20,10 @@
     </script>
 
     <p id="test">Hallo Welt!</p>
+
+    <div class="widget">
+       <button>Klick mich!</button> 
+    </div>   
 
 </body>
 </html>
