--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 <body>
     <script>
        $(function() {
+            $( ".widget input[type=submit], .widget a, .widget button" ).button();
+            $( "button, input, a" ).click( function( event ) {
+            event.preventDefault();
+            } );
             $("#test").click(function(){
                 alert("lol clicked!");
                 
