--- a/index.html
+++ b/index.html
@@ -5,17 +5,12 @@
     <title>Test Seite von Adrian</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css"></script>
+    <script src="main.js"></script>
 </head>
 <body>
     <script>
-       $(function() {
-            $( ".widget input[type=submit], .widget a, .widget button" ).button();
-            $( "button, input, a" ).click( function( event ) {
-            event.preventDefault();
-            } );
+       $(function() {        
             $("#test").click(function(){
                 alert("lol clicked!");
                 
@@ -25,7 +20,7 @@
 
     <p id="test">Hallo Welt!</p>
 
-    <div class="widget">
+    <div class="widget" onclick="myFunc()">
        <button>Klick mich!</button> 
     </div>   
 
