--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
     <p id="test">Hallo Welt!</p>
 
-    <div class="widget" onclick="myFunc()">
-       <button>Klick mich!</button> 
+    <div class="testbuttons">
+       <button onclick="myFunc()">Klick mich!</button> 
     </div>   
 
 </body>
