--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <p id="test">Hallo Welt!</p>
 
     <div class="testbuttons">
-       <button onclick="myFunc()">Klick mich!</button> 
+       <button onclick="myFunc()" type="button">Klick mich!</button> 
     </div>   
 
 </body>
