--- a/403/index.html
+++ b/403/index.html
@@ -1,7 +1,18 @@
-<span class="error">
-    <h1 align="center">403 - Forbidden</h1>
-    <br />
-    <p align="center">
-        <a href="https://www.adriansoftware.de" style="color:white">Copyright (c) Adrian Schubek. Powered by adriansoftware.de</a>
-    </p>
-</span>
+<html>
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>403 - Forbidden</title>
+        <link rel="stylesheet" type="text/css" media="screen" href="error.css" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+    </head>
+    <body>
+        <span class="error">
+            <h1 align="center">403 - Forbidden</h1>
+            <br />
+            <p align="center">
+                <a href="https://www.adriansoftware.de" style="color:white">Copyright (c) Adrian Schubek. Powered by adriansoftware.de</a>
+            </p>
+        </span>
+    </body>
+</html>
