--- a/403/index.html
+++ b/403/index.html
@@ -9,8 +9,8 @@
     <body>
         <span class="error">
             <h1 align="center">403 - Forbidden</h1>
-            <p>You don't have access to this page!</p>
-            <p>Sie haben keine Berechtigung um diese Seite anzusehen!</p>
+            <p class="info">You don't have access to this page!</p>
+            <p class="info">Sie haben keine Berechtigung um diese Seite anzusehen!</p>
             <br />
             <p align="center">
                 <a href="https://www.adriansoftware.de" style="color:white">Copyright (c) Adrian Schubek. Powered by adriansoftware.de</a>
