--- a/403/index.html
+++ b/403/index.html
@@ -10,7 +10,7 @@
         <span class="error">
             <h1 align="center">403 - Forbidden</h1>
             <p class="info">You don't have access to this page!</p>
-            <p class="info">Sie haben keine Berechtigung um diese Seite anzusehen!</p>
+            <p class="info">Sie haben keine Berechtigung diese Seite anzusehen!</p>
             <br />
             <p align="center">
                 <a href="https://www.adriansoftware.de" style="color:white">Copyright (c) Adrian Schubek. Powered by adriansoftware.de</a>
