--- a/editor/index.html
+++ b/editor/index.html
@@ -11,11 +11,15 @@
 </head>
 <body>
     <script>
-    $(function() {
-        hello();
-    });
+        $(function() {
+            hello();
+        });
     </script>
-
-
+    <h2 style="text-align: center;">HTML Editor</h2>
+    <h4 style="text-align: center;">von Adrian</h4>
+    <hr />
+    <div class="editor">
+        <button class="button1"></button>
+    </div>  
 </body>
 </html>
