--- a/editor/index.html
+++ b/editor/index.html
@@ -18,7 +18,7 @@
     <h4 style="text-align: center;">von Adrian</h4>
     <hr />
     <div class="editor">
-        <button class="button1"></button>
+        <button type="button" class="btn btn-primary" onclick="hello()">Klick mich!</button>
     </div>  
     <script src="main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
