--- a/editor/index.html
+++ b/editor/index.html
@@ -16,10 +16,20 @@
     </script>
     <h2 style="text-align: center;">HTML Editor</h2>
     <h4 style="text-align: center;">von Adrian</h4>
+
     <hr />
-    <div class="editor">
-        <button type="button" class="btn btn-primary" onclick="hello()">Klick mich!</button>
-    </div>  
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col">
+                <button type="button" class="btn btn-primary" onclick="hello()">Klick mich!</button>
+            </div>
+            <div class="col">
+                <p>Lol okay</p>
+            </div>
+          </div>
+    </div>
+        
     <script src="main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
