--- a/editor/index.html
+++ b/editor/index.html
@@ -36,7 +36,7 @@
     <script>
         $(function() {
             $("#setStartTemplate").click(function() {
-                $("#eingabeFeld").val("<!DOCTYPE html><html><head></head><body></body></html>"); 
+                $("#eingabeFeld").val("<!DOCTYPE html>\n<html>\n<head>\n</head>\n<body>\n<p>Hallo Welt!</p>\n</body>\n</html>"); 
             });                     
         });
     </script> 
